--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./css/style.css ">
         <title>Document</title>
     </head>
-    <body>
+    <body class="debug">
+        <header class="main-header">
+            <div class="container">
+                <div class="row">
+                    <div class="column col-20">logo</div>
+                    <div class="column col-60">link link link link link</div>
+                    <div class="column col-20">login</div>
+                </div>
+            </div>
+
+        </header>
         
     </body>
 </html>
