--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-    <html lang="en">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +8,7 @@
     </head>
     <body class="debug">
         <header class="main-header">
+            <!-- header -->
             <div class="container">
                 <div class="row">
                     <div class="column col-20">logo</div>
@@ -15,8 +16,12 @@
                     <div class="column col-20">login</div>
                 </div>
             </div>
-
         </header>
-        
+
+        <main>
+            <!-- Main section -->
+        </main>
     </body>
 </html>
+
+        
