ADDED - 5 sections to index.html with corresponding layouts.
(Sì, mi sono dimenticato di pushare... starò più attento)

--- a/index.html
+++ b/index.html
@@ -12,14 +12,65 @@
             <div class="container">
                 <div class="row">
                     <div class="column col-20">logo</div>
-                    <div class="column col-60">link link link link link</div>
-                    <div class="column col-20">login</div>
+                    <div id="prov-text-c" class="column col-60">link link link link link</div>
+                    <div id="prov-text-r" class="column col-20">login</div>
                 </div>
             </div>
         </header>
 
-        <main>
-            <!-- Main section -->
+        <main class="main-content">
+            <!-- Main  -->
+            <section class="blue-section">
+                <!-- Blue section -->
+                <div class="container">
+                    <div class="row">
+                        <div class="column col-100"></div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="white-section">
+                <!-- White section -->
+                <div class="container">
+                    <div class="row">
+                        <div class="column col-60"></div>
+                        <div class="column col-40"></div>        
+                    </div>
+                </div>
+            </section>
+
+            <section class="grey-section">
+                <!-- Grey section -->
+                <div class="container">
+                    <div class="row-reverse">
+                        <div class="column col-60"></div>
+                        <div class="column col-40"></div>        
+                    </div>
+                </div>
+            </section>
+
+            <section class="white-section">
+                <!-- White section -->
+                <div class="container">
+                    <div class="row">
+                        <div class="column col-60"></div>
+                        <div class="column col-40"></div>        
+                    </div>
+                </div>
+            </section>
+
+            <section class="grey-section">
+                <!-- Blue section -->
+                <div class="container">
+                    <div class="row">
+                        <div class="column col-100"></div>
+                    </div>
+                </div>
+            </section>
+
+        
+
+
         </main>
     </body>
 </html>
