ADDED - Line below in the footer. Minor fixes.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <section class="grey-section">
                 <!-- Grey section -->
                 <div class="container">
-                    <div class="row-reverse">
+                    <div class="row row-reverse">
                         <div class="column col-60"></div>
                         <div class="column col-40"></div>        
                     </div>
@@ -84,6 +84,8 @@
                     </div>
                 </div>
             </section>
+
+            <div class="line"></div>
 
         </footer>
             
