--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             <section class="grey-section">
                 <!-- Grey section -->
                 <div class="container">
-                    <div class="row row-reverse">
-                        <div class="column col-60"></div>
-                        <div class="column col-40"></div>        
+                    <div class="row">
+                        <div class="column col-40"></div>
+                        <div class="column col-60"></div>        
                     </div>
                 </div>
             </section>
@@ -86,6 +86,16 @@
             </section>
 
             <div class="line"></div>
+
+            <!-- Second part footer -->
+            <section>
+                <div class="container">
+                    <div class="footer-row">
+                        <div class="item">Logo</div>
+                        <div class="item">Bottone</div>
+                    </div>
+                </div>
+            </section>
 
         </footer>
             
